# kanji_time_public

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  cli_usage.md  dev_requirements_only.txt  docs_requirements_only.txt  pylintrc  pyproject.toml  pytest.ini  requirements.txt  third_party_licenses.rst  troubleshooting.md
.github/workflows/: build_wheel.yml  validate_Linux.yml  validate_macOS.yml  validate_windows.yml
docs/: CODEBASE_REVIEW.md  Makefile  NOTICE  REVIEW_INDEX.md  TEACHING_GUIDE.md  check-mermaid.html  requirements.txt
docs/parking_lot/: ack.rst  code_tweaks.rst  content_frame.rst  figures.rst  index.rst  index__.rst  ks_sample.rst  new_index.rst  practice_sheet_TODO.rst  ps_sample.rst  req_tracing.rst  road_ahead.rst  roadmap.rst  stubs_index.rst
docs/parking_lot/llm_assist/: gpt_links.rst  index.rst  kanji_time_gpt.rst
docs/source/: README.rst  architecture.rst  common  conf.py  html_index  index.rst  index_linear.rst  index_nonlinear.rst  installation.rst  internals.rst  licensing.rst  overview.rst  road_ahead_redux.rst  samples.rst  singlehtml_index  usage.rst
docs/source/_ext/: unique_section_ids.py
docs/source/_static/: custom.css  custom_alabaster.css
docs/source/about/: LICENSE_link.rst  about_docs.rst  about_kanjitime.rst  history.rst  license.rst  notice.rst  third_party_licenses.rst
docs/source/code/: kanji_time.py  svg_transform.py
docs/source/code_stubs/: __init__.py.rst  __main__.py.rst  dev_notes_index.rst  development.rst  dirsonly  dirtree  kanji_time.py.rst  kanji_time_cli.py.rst  kanji_time_gpt.rst  settings.py.rst  svg_transform.py.rst
docs/source/data/: index.rst  kanji_dict.rst  kanji_svg.rst  kanjidict2.rst  radicals.rst
docs/source/design/: cli_entry.rst  external.rst  geometry.rst  open_data.rst  open_data_link.rst  packaged_frames.rst  page_layout.rst  pagination.rst  q_and_a.rst  report_addon.rst  review.rst  under_construction.rst
docs/source/dev_guide/: index.rst
docs/source/dev_notes/: index.rst
docs/source/frames/: container.rst  drawing.rst  empty_space.rst  formatted_text.rst  index.rst  page.rst  page_rule.rst  simple_element.rst  stack_layout.rst  strategy.rst
docs/source/geometry/: distance.rst  extent.rst  index.rst  pos.rst  region.rst
docs/source/misc_helpers/: index.rst  logging.rst
kanji_time/: __init__.py  __main__.py  kanji_time.py  kanji_time_cli.py  settings.py  svg_transform.py
kanji_time/adapter/: __init__.py  svg.py
kanji_time/dev_notes/: kanji_time_cli_notes.rst  settings_notes.rst
kanji_time/external_data/: CJKRadicals.txt  __init__.py  get_types.sh  kanji_dic2.py  kanji_dict.py  kanji_svg.md  kanji_svg.py  kanji_svg.rst  kanjivg.sql  radicals.py  settings.py  to_snowflake.sql  xml_loader.ipynb  xml_loader.py  xml_namespaces.py
kanji_time/reports/: __init__.py  controller.py
kanji_time/test/: test_cli.py
kanji_time/utilities/: __init__.py  check_attrs.py  class_property.py  general.py  singleton.py  xml.py
kanji_time/visual/: __init__.py
scripts/: add_copyright.sh  mkgitlinks.sh
(+192 files in other folders)
