[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kanji-time"
version = "0.1.0.20250531"
description = "A tool for generating kanji study sheets and dictionary summaries"
readme = "README.rst"
license = "AGPL-3.0-only"
license-files = ["LICENSE", "third_party_licenses.rst"]

authors = [
  { name="Andrew Milton", email="andrewm@chinsegut.com" }
]
maintainers = [
  { name="Andrew Milton", email="andrewm@chinsegut.com" }
]
dependencies = [
	"asttokens>=3.0.0",
	"chardet>=5.2.0",
	"cssselect2>=0.8.0",
	"decorator>=5.2.1",
	"executing>=2.2.0",
	"ipython>=9.3.0",
	"ipython_pygments_lexers>=1.1.1",
	"jedi>=0.19.2",
	"lxml>=5.4.0",
	"matplotlib-inline>=0.1.7",
	"parso>=0.8.4",
	"pexpect>=4.9.0",
	"pillow>=11.2.1",
	"prompt_toolkit>=3.0.51",
	"ptyprocess>=0.7.0",
	"pure_eval>=0.2.3",
	"Pygments>=2.19.1",
	"reportlab>=4.4.1",
	"stack-data>=0.6.3",
	"svglib>=1.5.1",
	"svgwrite>=1.4.3",
	"tinycss2>=1.4.0",
	"traitlets>=5.14.3",
	"typing_extensions>=4.13.2",
	"wcwidth>=0.2.13",
	"webencodings>=0.5.1"
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Education"
]

[project.scripts]
kanjitime = "kanji_time.__main__:main"
