[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"kanji_time.external_data" = [
    "CJKRadicals.txt",
    "JMdict_e_examp.gz",
    "kanjidic2.xml.gz",
    "kanjivg-20240807-main.zip",
]

[project]
name = "kanji-time"
dynamic = ["version"]  
description = "A tool for generating kanji study sheets and dictionary summaries"
readme = "README.rst"
license = "AGPL-3.0-only"
license-files = ["LICENSE", "third_party_licenses.rst"]

authors = [
  { name="Andrew Milton", email="andrewm@chinsegut.com" }
]
maintainers = [
  { name="Andrew Milton", email="andrewm@chinsegut.com" }
]

dependencies = [
	"chardet>=5.2.0",
	"cssselect2>=0.8.0",
	"lxml>=5.4.0",
	"pillow>=11.2.1",
	"Pygments>=2.19.1",
	"reportlab>=4.4.1",
	"svglib>=1.5.1",
	"svgwrite>=1.4.3",
	"tinycss2>=1.4.0",
	"typing_extensions>=4.13.2",
	"webencodings>=0.5.1"
]
requires-python = ">=3.11"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Education"
]

[tool.setuptools.dynamic]
version = {attr = "kanji_time.__version__"}

[project.urls]
documentation = "https://kanji-time-public.readthedocs.io/en/latest/"
repository = "https://github.com/HouseElves/kanji_time_public"

[project.scripts]
kanjitime = "kanji_time.__main__:main"

